--- a/index.css
+++ b/index.css
@@ -34,10 +34,12 @@ a{
 }
 main{
    display: flex;
+   flex-direction: column;
    flex:1; 
    justify-content: center;
    align-items: center;
 }
+/* hero section start */
 .hero-img img{ 
     width: 350px;
     height: 200px;
@@ -80,3 +82,4 @@ main{
     width: fit-content;
 
 }
+/* some standard information */
