--- a/index.css
+++ b/index.css
@@ -83,3 +83,39 @@ main{
 
 }
 /* some standard information */
+.info{
+    display: flex;
+    flex-direction: column;
+    gap:20px;
+    padding: 50px;
+    align-items: center;
+}
+.info-title{
+    font-size: 36px;
+    color: #1f2937;
+    font-weight: 900;
+}
+.info-cards{
+    display: flex;
+    flex-wrap: wrap;  /* Ensures items wrap if there are too many */
+    justify-content: space-around; /* Distributes the cards evenly */
+    gap: 20px; /* Adds space between cards */
+}
+.info-card{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 200px; /* Width of each card */
+    padding: 10px;
+}
+.card-img img{
+    max-width: 100%;  /* Ensures the image doesn't overflow its container */
+    height: 150px; /* Maintains aspect ratio */
+    width: 150px; 
+    border: 4px solid #3882f6;
+    border-radius: 16px;
+    padding: 10px;
+}
+.card-text{
+    text-align: center;
+}
