--- a/index.css
+++ b/index.css
@@ -1,77 +1,72 @@
-*{
-    margin:0;
+* {
+    margin: 0;
     padding: 0;
 }
-body{
+body {
     display: flex;
     flex-direction: column;
-    font-family: 'Roboto', sans-serif;  
+    font-family: "Roboto", sans-serif;
 }
-header{
+header {
     display: flex;
     justify-content: space-between;
     align-items: center;
     color: white;
-    background-color: #1F2937;
+    background-color: #1f2937;
     padding: 10px 120px;
 }
-.left-links{
+.left-links {
     font-size: 24px;
     color: #f9faf8;
 }
-.right-links{
+.right-links {
     display: flex;
 }
-ul{
+ul {
     display: flex;
-    gap:20px;
+    gap: 20px;
     list-style: none;
-   
 }
-a{
+a {
     text-decoration: none;
     color: #e5e7eb;
 }
-main{
-   display: flex;
-   flex-direction: column;
- 
-   justify-content: center;
-   align-items: center;
+main {
+    display: flex;
+    flex-direction: column;
+
+    justify-content: center;
+    align-items: center;
 }
 /* hero section start */
-.hero-img img{ 
+.hero-img img {
     width: 350px;
     height: 200px;
 }
-.hero{
+.hero {
     display: flex;
-    background-color: #1F2937;
+    background-color: #1f2937;
     padding: 50px 120px;
-    align-items: center;
+   
+    width: -webkit-fill-available;
     justify-content: space-between;
     gap: 50px;
-   
-   
- 
-
 }
-.hero-content{
+.hero-content {
     display: flex;
     flex-direction: column;
     gap: 15px;
-  
 }
-.hero-title{
+.hero-title {
     font-size: 48px;
     color: #f9faf8;
     font-weight: 900;
 }
-.hero-subtitle{
+.hero-subtitle {
     font-size: 18px;
     color: #e5e7eb;
 }
-.hero-button{
+.hero-button {
     background-color: #3882f6;
     color: #e5e7eb;
     font-size: medium;
@@ -82,70 +77,66 @@ main{
     cursor: pointer;
     display: inline;
     width: fit-content;
-
 }
 /* some standard information */
-.info{
+.info {
     display: flex;
     flex-direction: column;
-    gap:20px;
+    gap: 20px;
     padding: 50px;
     align-items: center;
 }
-.info-title{
+.info-title {
     font-size: 36px;
     color: #1f2937;
     font-weight: 900;
 }
-.info-cards{
+.info-cards {
     display: flex;
-    flex-wrap: wrap;  /* Ensures items wrap if there are too many */
+    flex-wrap: wrap; /* Ensures items wrap if there are too many */
     justify-content: space-around; /* Distributes the cards evenly */
     gap: 20px; /* Adds space between cards */
 }
-.info-card{
+.info-card {
     display: flex;
     flex-direction: column;
     align-items: center;
     width: 200px; /* Width of each card */
     padding: 10px;
 }
-.card-img img{
-    max-width: 100%;  /* Ensures the image doesn't overflow its container */
+.card-img img {
+    max-width: 100%; /* Ensures the image doesn't overflow its container */
     height: 150px; /* Maintains aspect ratio */
-    width: 150px; 
+    width: 150px;
     border: 4px solid #3882f6;
     border-radius: 16px;
     padding: 10px;
 }
-.card-text{
+.card-text {
     text-align: center;
 }
 /*  */
-.quotes{
+.quotes {
     background-color: #e5e7eb;
     padding: 50px 100px;
     display: flex;
     flex-direction: column;
-
-
 }
-.quotes-content{
+.quotes-content {
     font-size: 36px;
     font-weight: lighter;
     font-style: italic;
     color: #1f2937;
-
 }
-.author{
-   text-align-last: right; 
-   font-weight: bold;
+.author {
+    text-align-last: right;
+    font-weight: bold;
 }
 /*  */
-.contact{
+.contact {
     padding: 100px 150px;
 }
-.contact-us{
+.contact-us {
     display: flex;
     justify-items: center;
     justify-content: space-between;
@@ -155,20 +146,36 @@ main{
     gap: 50px;
     color: #f9faf8;
 }
-.contact-button{
+.contact-button {
     display: flex;
     align-items: center;
 }
-.contact-button button{
+.contact-button button {
     background-color: #3882f6;
     color: #f9faf8;
     font-weight: bold;
     font-size: small;
     border: 2px solid #f9faf8;
-    
+
     border-radius: 10px;
     padding: 10px 15px;
     width: max-content;
+}
+.contact-text{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+.contact-title{
+    font-size: large;
+    font-weight: bold;
+}
+footer{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
+    color: #f9faf8;
 
-
+    background-color: #1f2937;
 }
